--- a/src/components/MyForm/MyForm.module.css
+++ b/src/components/MyForm/MyForm.module.css
@@ -2,5 +2,13 @@
     display: flex;
     flex-direction: column;
     width: 160px;
-    padding-top: 20px;
+}
+
+.contactButton {
+    width: 90px;
+    margin-top: 20px;
+}
+
+.contactInput {
+    margin-top: 10px;
 }
