--- a/src/components/MyForm/MyForm.module.css
+++ b/src/components/MyForm/MyForm.module.css
@@ -2,13 +2,15 @@
     display: flex;
     flex-direction: column;
     width: 160px;
+    margin-top: 10px;
 }
 
 .contactButton {
     width: 90px;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 .contactInput {
     margin-top: 10px;
+    margin-bottom: 10px;
 }
